refactor: 重构画笔模块.

--- a/src/ui/settings/default_settings.json
+++ b/src/ui/settings/default_settings.json
@@ -2,6 +2,7 @@
     "brush": {
         "pen_width": 7,
         "pen_color": [0, 120, 255],
+        "brush_type": "pencil",
         "force_topmost": true
     },
     "app": {
